RichTextEditor - Styling and keyboard commands

--- a/web/package.json
+++ b/web/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "classnames": "^2.2.5",
     "draft-js": "^0.10.5",
+    "draft-js-export-html": "^1.2.0",
     "husky": "^0.14.3",
     "lint-staged": "^7.0.0",
     "normalize.css": "^8.0.0",
