--- a/web/package.json
+++ b/web/package.json
@@ -6,6 +6,7 @@
     "classnames": "^2.2.5",
     "draft-js": "^0.10.5",
     "draft-js-export-html": "^1.2.0",
+    "firebase": "^4.11.0",
     "husky": "^0.14.3",
     "lint-staged": "^7.0.0",
     "normalize.css": "^8.0.0",
@@ -13,7 +14,9 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts-ts": "2.14.0"
+    "react-scripts-ts": "2.14.0",
+    "react-side-effect": "^1.1.5",
+    "react-transition-group": "^2.2.1"
   },
   "scripts": {
     "precommit": "lint-staged",
@@ -30,6 +33,8 @@
     "@types/react": "^16.0.40",
     "@types/react-dom": "^16.0.0",
     "@types/react-router-dom": "^4.2.4",
+    "@types/react-side-effect": "^1.0.6",
+    "@types/react-transition-group": "^2.0.7",
     "typescript": "^2.7.2"
   },
   "lint-staged": {
