--- a/package.json
+++ b/package.json
@@ -16,14 +16,16 @@
     "react-router-dom": "^4.2.2",
     "react-scripts-ts": "2.14.0",
     "react-side-effect": "^1.1.5",
-    "react-transition-group": "^2.2.1"
+    "react-transition-group": "^2.2.1",
+    "uuid": "^3.2.1"
   },
   "scripts": {
     "precommit": "lint-staged",
     "start": "react-scripts-ts start",
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
-    "eject": "react-scripts-ts eject"
+    "eject": "react-scripts-ts eject",
+    "deploy:rules": "firebase deploy --only firestore:rules"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.3",
@@ -35,12 +37,10 @@
     "@types/react-router-dom": "^4.2.4",
     "@types/react-side-effect": "^1.0.6",
     "@types/react-transition-group": "^2.0.7",
+    "@types/uuid": "^3.4.3",
     "typescript": "^2.7.2"
   },
   "lint-staged": {
-    "src/**/*.{js,jsx,json,css}": [
-      "prettier --single-quote --write",
-      "git add"
-    ]
+    "src/**/*.{js,jsx,json,css}": ["prettier --single-quote --write", "git add"]
   }
 }
