--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject",
-    "deploy:rules": "firebase deploy --only firestore:rules"
+    "deploy:firestore:rules": "firebase deploy --only firestore:rules",
+    "deploy:storage:rules": "firebase deploy --only storage"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.3",
