--- a/tsconfig.functions.json
+++ b/tsconfig.functions.json
@@ -1,23 +1,21 @@
 {
   "compilerOptions": {
     "baseUrl": ".",
-    "outDir": "build/dist",
-    "module": "esnext",
-    "target": "es5",
     "lib": ["es6", "dom"],
-    "sourceMap": true,
-    "allowJs": true,
-    "jsx": "react",
-    "moduleResolution": "node",
-    "rootDir": "src",
+    "module": "commonjs",
     "forceConsistentCasingInFileNames": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
-    "noUnusedLocals": true
+    "noUnusedLocals": true,
+    "outDir": "build_functions",
+    "sourceMap": true,
+    "target": "es6",
+    "rootDir": "src"
   },
+  "include": ["src/functions/index.ts"],
   "exclude": [
     "node_modules",
     "build",
