--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "draft-js": "^0.10.5",
     "draft-js-export-html": "^1.2.0",
     "firebase": "4.12.1",
+    "firebase-admin": "^5.11.0",
+    "firebase-functions": "^0.9.1",
     "husky": "^0.14.3",
     "lint-staged": "^7.0.0",
     "normalize.css": "^8.0.0",
