--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "draft-js": "^0.10.5",
     "draft-js-export-html": "^1.2.0",
     "firebase": "4.12.1",
-    "firebase-admin": "^5.11.0",
+    "firebase-admin": "^5.12.0",
     "firebase-functions": "^1.0.0",
     "husky": "^0.14.3",
     "lint-staged": "^7.0.0",
@@ -24,6 +24,7 @@
   "scripts": {
     "precommit": "lint-staged",
     "start": "react-scripts-ts start",
+    "start:https": "HTTPS=true react-scripts-ts start",
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject",
