--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "chalk": "^2.4.0",
     "classnames": "^2.2.5",
+    "commander": "^2.15.1",
     "draft-js": "^0.10.5",
     "draft-js-export-html": "^1.2.0",
     "firebase": "4.12.1",
@@ -12,6 +14,7 @@
     "husky": "^0.14.3",
     "lint-staged": "^7.0.0",
     "normalize.css": "^8.0.0",
+    "ora": "^2.0.0",
     "prettier": "^1.11.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -26,6 +29,7 @@
     "start": "react-scripts-ts start",
     "start:https": "HTTPS=true react-scripts-ts start",
     "build": "react-scripts-ts build",
+    "build:cli": "rm -rf mb-cli && tsc --project tsconfig.cli.json && echo '{\"main\": \"cli/index.js\"}' > mb-cli/package.json",
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject",
     "deploy:firestore:rules": "firebase deploy --only firestore:rules",
@@ -39,6 +43,7 @@
     "@types/draft-js": "^0.10.20",
     "@types/jest": "^22.2.0",
     "@types/node": "^9.4.6",
+    "@types/ora": "^1.3.4",
     "@types/react": "^16.0.40",
     "@types/react-dom": "^16.0.0",
     "@types/react-router-dom": "^4.2.4",
