--- a/tsconfig.cli.json
+++ b/tsconfig.cli.json
@@ -10,17 +10,16 @@
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
     "noUnusedLocals": true,
-    "outDir": "build_functions",
+    "outDir": "mb-cli",
     "sourceMap": true,
     "target": "es6",
     "rootDir": "src"
   },
-  "include": ["src/functions/index.ts"],
+  "include": ["src/cli/**/**.*"],
   "exclude": [
     "node_modules",
     "build",
     "build_functions",
-    "mb-cli",
     "scripts",
     "acceptance-tests",
     "webpack",
