--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 # production
 /build
 /build_functions
+/mb-cli
 
 # misc
 .DS_Store
@@ -16,6 +17,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+misty-bob-service-account.json
 
 npm-debug.log*
 yarn-debug.log*
