--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ REACT_APP_FIREBASE_DATABASE_URL='https://misty-bob.firebaseio.com'
 REACT_APP_FIREBASE_PROJECT_ID='misty-bob'
 REACT_APP_FIREBASE_STORAGE_BUCKET='gs://misty-bob.appspot.com/'
 REACT_APP_FIREBASE_MESSAGING_SENDER_ID='136623417703'
+REACT_APP_FIREBASE_MESSAGING_PUBLIC_VAPID_KEY='BIjDev_YYT1Txrc4KUtAZKdckT4jwuc__cApIXjktyex-0LA8Q-xUYrivAGoqj7iVq_2SK1b7LyNgzbe8MdRQhA'
