--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-scripts-ts": "2.15.1",
     "react-side-effect": "^1.1.5",
     "react-transition-group": "^2.2.1",
+    "ts-debounce": "^0.2.0",
     "uuid": "^3.2.1"
   },
   "scripts": {
