--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prettier": "^1.11.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-intl": "^2.4.0",
     "react-router-dom": "^4.2.2",
     "react-scripts-ts": "2.15.1",
     "react-side-effect": "^1.1.5",
@@ -47,6 +48,7 @@
     "@types/ora": "^1.3.4",
     "@types/react": "^16.0.40",
     "@types/react-dom": "^16.0.0",
+    "@types/react-intl": "^2.3.7",
     "@types/react-router-dom": "^4.2.4",
     "@types/react-side-effect": "^1.0.6",
     "@types/react-transition-group": "^2.0.7",
