--- a/package.json
+++ b/package.json
@@ -6,25 +6,25 @@
     "chalk": "^2.4.0",
     "classnames": "^2.2.5",
     "commander": "^2.15.1",
-    "draft-js": "^0.10.5",
-    "draft-js-export-html": "^1.2.0",
+    "draft-js": "0.10.5",
+    "draft-js-export-html": "1.2.0",
     "firebase": "4.12.1",
-    "firebase-admin": "^5.12.0",
-    "firebase-functions": "^1.0.0",
+    "firebase-admin": "5.12.0",
+    "firebase-functions": "1.0.1",
     "husky": "^0.14.3",
     "lint-staged": "^7.0.0",
     "normalize.css": "^8.0.0",
     "ora": "^2.0.0",
     "prettier": "^1.11.1",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-intl": "^2.4.0",
-    "react-router-dom": "^4.2.2",
+    "react": "16.3.2",
+    "react-dom": "16.3.2",
+    "react-intl": "2.4.0",
+    "react-router-dom": "4.2.2",
     "react-scripts-ts": "2.15.1",
-    "react-side-effect": "^1.1.5",
-    "react-transition-group": "^2.2.1",
-    "ts-debounce": "^0.2.0",
-    "uuid": "^3.2.1"
+    "react-side-effect": "1.1.5",
+    "react-transition-group": "2.3.1",
+    "ts-debounce": "0.2.0",
+    "uuid": "3.2.1"
   },
   "scripts": {
     "precommit": "lint-staged",
@@ -53,7 +53,7 @@
     "@types/react-side-effect": "^1.0.6",
     "@types/react-transition-group": "^2.0.7",
     "@types/uuid": "^3.4.3",
-    "typescript": "^2.7.2"
+    "typescript": "2.8.3"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,json,css}": [
