--- a/src/functions/package.json
+++ b/src/functions/package.json
@@ -2,8 +2,8 @@
   "name": "functions",
   "main": "functions/index.js",
   "dependencies": {
-    "firebase-admin": "^5.12.0",
-    "firebase-functions": "^1.0.0"
+    "firebase-admin": "5.12.0",
+    "firebase-functions": "1.0.1"
   },
   "private": true
 }
