--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,6 @@
     "acceptance-tests",
     "webpack",
     "jest",
-    "src/setupTests.ts",
-    "src/functions"
+    "src/setupTests.ts"
   ]
 }
